[package]
name = "tau-cpu"
version = "0.1.0"
authors = ["Vladislav Melnik <vladislav.melnik@protonmail.com>"]
edition = "2018"

[dependencies]
tau-regs = { path = "regs" }
tau-cortex-a = { path = "cortex-a", optional = true }
tau-cpu-macros = { path = "macros", optional = true }

[features]
cortex-a = ["tau-cortex-a"]
macros = ["tau-cpu-macros"]
